Maybe the drop cap is fixed on mobile now?

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,8 +27,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .begins-with-drop-cap::first-letter {
 	float: left;
-	font-size: 500%;
-	line-height: 50%;
+	font-size: 5em;
+	line-height: .6;
 
 	margin-right: 0.1em;
 	margin-top: 0.08em;
